--- a/src/app.html
+++ b/src/app.html
@@ -6,10 +6,12 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title>Gianmarco Cavallo — Front-End Developer</title>
-		<meta name="title" content="Gianmarco Cavallo — Front-End Developer" />
-		<meta name="description" content="Front-End Developer, based in italy" />
-
+		<title>Hi, itsmenewbie03 ✋</title>
+		<meta name="title" content="Hi, itsmenewbie03 ✋" />
+		<meta name="description" content="Curiosity is where this all started." />
+		<meta name="og:title" content="Hi, itsmenewbie03 ✋" />
+		<meta name="og:description" content="Curiosity is where this all started." />
+		<meta name="og:image" content="https://i.redd.it/4q7g5p37naa81.png" />
 		%sveltekit.head%
 	</head>
 	<body>
