--- a/src/app.html
+++ b/src/app.html
@@ -9,9 +9,9 @@
 		<title>Hi, itsmenewbie03 👋</title>
 		<meta name="title" content="Hi, itsmenewbie03 👋" />
 		<meta name="description" content="Curiosity is where this all started." />
-		<meta name="og:title" content="Hi, itsmenewbie03 👋" />
-		<meta name="og:description" content="Curiosity is where this all started." />
-		<meta name="og:image" content="https://i.redd.it/4q7g5p37naa81.png" />
+		<meta property="og:title" content="Hi, itsmenewbie03 👋" />
+		<meta property="og:description" content="Curiosity is where this all started." />
+		<meta property="og:image" content="https://i.redd.it/4q7g5p37naa81.png" />
 		%sveltekit.head%
 	</head>
 	<body>
