Revert "fix(head): move tags to +page.svelte"
This reverts commit 724aeef45fe2b6d8ea65e4066d0fc7c738e36f90.

--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,12 @@
 		<title>Hi, itsmenewbie03 👋</title>
 		<meta name="title" content="Hi, itsmenewbie03 👋" />
 		<meta name="description" content="Curiosity is where this all started." />
+		<meta property="og:title" content="Hi, itsmenewbie03 👋" />
+		<meta property="og:description" content="Curiosity is where this all started." />
+		<meta property="og:image" content="https://i.redd.it/4q7g5p37naa81.png" />
+		<meta property="og:url" content="https://itsmenewbie03.is-a.dev" />
+		<meta property="og:type" content="website" />
+		<meta property="fb:app_id" content="1110621549957918" />
 		%sveltekit.head%
 	</head>
 	<body>
